[gd_scene load_steps=13 format=3 uid="uid://bgufn53xcgfrg"]

[ext_resource type="Script" uid="uid://d1t5owrrfukyr" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://tdhobc0cddlk" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://ckudvjbhirwna" path="res://ball.tscn" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://bu8ficuj3p2w0" path="res://bottom_wall.gd" id="2_7mycd"]
[ext_resource type="PackedScene" uid="uid://cxmogf8xjehpp" path="res://block.tscn" id="4_1bvp3"]
[ext_resource type="Theme" uid="uid://ljrld2w6646" path="res://assets/ui_theme.tres" id="5_lquwl"]
[ext_resource type="Script" uid="uid://civyh0e3w41xv" path="res://main_menu.gd" id="7_272bh"]
[ext_resource type="Script" uid="uid://bkiv2pmorpo8y" path="res://game_over_menu.gd" id="8_5vw27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(16, 362.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig7tw"]
size = Vector2(651, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(20, 360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2yge"]
size = Vector2(647, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2(-8, 181.25)
shape = SubResource("RectangleShape2D_7dm0k")

[node name="TopWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(320.5, -10)
shape = SubResource("RectangleShape2D_ig7tw")

[node name="RightWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(650, 180)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
unique_name_in_owner = true
script = ExtResource("2_7mycd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2(322.5, 370)
shape = SubResource("RectangleShape2D_h2yge")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
unique_name_in_owner = true
position = Vector2(320, 341)

[node name="Ball" parent="." instance=ExtResource("2_0xm2m")]
unique_name_in_owner = true
position = Vector2(321, 186)

[node name="Blocks" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 32)

[node name="Block" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 104)

[node name="Block2" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 104)

[node name="Block3" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 104)

[node name="Block4" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 104)

[node name="Block5" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 104)

[node name="Block6" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 104)

[node name="Block7" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 104)

[node name="Block8" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 104)

[node name="Block9" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 104)

[node name="Block10" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 104)

[node name="Block11" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 88)

[node name="Block12" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 72)

[node name="Block13" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 56)

[node name="Block14" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 40)

[node name="Block15" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 24)

[node name="Block16" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(608, 8)

[node name="Block17" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 8)

[node name="Block18" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 8)

[node name="Block19" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 8)

[node name="Block20" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 8)

[node name="Block21" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 8)

[node name="Block22" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 8)

[node name="Block23" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 8)

[node name="Block24" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 8)

[node name="Block25" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 8)

[node name="Block26" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 24)

[node name="Block27" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 40)

[node name="Block28" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 56)

[node name="Block29" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 72)

[node name="Block30" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(32, 88)

[node name="Block31" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 88)

[node name="Block32" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 72)

[node name="Block33" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 56)

[node name="Block34" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 40)

[node name="Block35" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 24)

[node name="Block36" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 40)

[node name="Block37" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 56)

[node name="Block38" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 72)

[node name="Block39" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 88)

[node name="Block40" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 56)

[node name="Block41" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 40)

[node name="Block42" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(544, 24)

[node name="Block43" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 24)

[node name="Block44" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 24)

[node name="Block45" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 40)

[node name="Block46" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 72)

[node name="Block47" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(480, 88)

[node name="Block48" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 56)

[node name="Block49" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 72)

[node name="Block50" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(416, 88)

[node name="Block51" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 88)

[node name="Block52" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 72)

[node name="Block53" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 56)

[node name="Block54" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(352, 40)

[node name="Block55" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 24)

[node name="Block56" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 24)

[node name="Block57" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 24)

[node name="Block58" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 24)

[node name="Block59" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 40)

[node name="Block60" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 56)

[node name="Block61" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(96, 72)

[node name="Block62" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 40)

[node name="Block63" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 40)

[node name="Block64" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 56)

[node name="Block65" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(160, 88)

[node name="Block66" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 72)

[node name="Block67" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(224, 88)

[node name="Block68" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 88)

[node name="Block69" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 72)

[node name="Block70" parent="Blocks" instance=ExtResource("4_1bvp3")]
position = Vector2(288, 56)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 22.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 55

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "Score 0"

[node name="HealthLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "Health 0"

[node name="LevelLabel" type="Label" parent="CanvasLayer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "Level 01"

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_272bh")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="GameTitle" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "Breakout!"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="HSMainMenuLabel" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "High Score: 0"

[node name="BtnStart" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_lquwl")
text = "Play!"

[node name="GameOverMenu" type="PanelContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_5vw27")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GameOverMenu"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 19

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="HSGameOverLabel" type="Label" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "High Score: 0"

[node name="BtnRetry" type="Button" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retry"

[node name="BtnMainMenu" type="Button" parent="CanvasLayer/GameOverMenu/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"
